# sep_solver

./: .gitignore  README.md  TASK_1_SUMMARY.md  advanced_example_config.json  advanced_example_progress.json  basic_example_report.txt  basic_example_solutions.json  mori.py  pyproject.toml  pytest.ini  requirements-viz.txt  requirements.txt  scripts  strategy_comparison_results.json
.hypothesis/constants/: 02fe586cc909bd2c  06e40d9c82982f95  073b091a32adfb00  0e5566d792dd1f42  16b3fe6c68cc1a8e  198360b40cf0045e  1b3893fb5f7f6ba9  2470a8df136c555d  25c43ce4963432a6  32536c4a9a82a634  3980720603223326  4969fe11cc7d7edb  4afcd096c24b4290  4b3c708b86fe6162  590b9a3d68b8c763  59a24e81b0444d9e  5f319ef4eca67d26  60d4842ad85fd220  61c6877f9e15e0bb  6318cdbac756cc61  645567d02746e55d  64933f356c73363a  6aba2491dd476f94  70ae7f9ae9fe79d9  74f61d44f9764cfb  76a3944e06971f5e  7728656a219ebe09  78bef3ed9550fba7  7b79f53359bca1f9  7f816fd9c020f434  83ec95567abee671  8404e260a4bb7aad  873076f977421e60  898c53e540136db9  8c59fd7df1b372b7  9a25c2d58879f072  a0d36336a238c4cf  abdfd4b991f26b45  b1d87ed4250c3929  b52e0d7564e3cf09  (+23 more)
.hypothesis/tmp/: tmp11dqz910  tmp1ubwbynz  tmp4yekgtoa  tmp5q06km72  tmp5tobh8k_  tmp7pmhab91  tmp8pv8yw75  tmp980asioy  tmp9jzcnmdq  tmp_de21kwt  tmp_zto0y0e  tmpa8hf7lps  tmpafiby1e9  tmpcs3p94s5  tmpctiymzdc  tmper_630bm  tmpf3hzu61f  tmpff9zm28_  tmphz182kfw  tmpio96z2fr  tmpjaa4yhbt  tmpkf0e3e5x  tmplpc6cpbm  tmpmvqtr_kr  tmpnnkbetm0  tmpo3b31eli  tmppelzvn5s  tmppu9exlej  tmpqwycrak7  tmpqx1k3bmo  tmprcz75aep  tmps5kfms66  tmpsofc2m8y  tmpt9b6rasg  tmpu4j7hvm3  tmpvc5x53ae  tmpvef7fa30  tmpw8lr1sv9  tmpxgzifda7  tmpz3po08fa  (+1 more)
docs/: BUILDING_SYSTEM_DESIGN.md  ORGANIZATION_SUMMARY.md  OUTPUT_ORGANIZATION.md  VISUALIZATION.md  VISUALIZATION_QUICK_REFERENCE.md
docs/implementation/: CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  SUCCESS_SUMMARY.md  VISUALIZATION_FEATURES.md
examples/: README.md  README_BUILDING_DESIGN.md  advanced_configuration.py  basic_usage.py  building_system_design.py  custom_constraints.py  exploration_strategies.py  interactive_visualization.py
sep_solver/: __init__.py
sep_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sep_solver/core/: __init__.py  config.py  engine.py  exceptions.py  interfaces.py  plugin_system.py  results.py
sep_solver/evaluators/: __init__.py  constraint_evaluator.py  custom_constraints.py  schema_validator.py
sep_solver/generators/: __init__.py  structure_generator.py  variable_assigner.py
sep_solver/models/: __init__.py  constraint_set.py  design_object.py  exploration_state.py  structure.py  variable_assignment.py
sep_solver/utils/: __init__.py  debug_logger.py  logging.py  progress.py  serialization.py  visualization.py
tests/: __init__.py  conftest.py  test_visualization_basic.py
tests/test_core/: test_config.py  test_config_properties.py  test_engine_properties.py  test_plugin_system_properties.py
tests/test_evaluators/: __init__.py  test_constraint_evaluator_properties.py  test_custom_constraints.py  test_schema_validator.py
tests/test_generators/: test_structure_generator.py  test_structure_generator_properties.py  test_variable_assigner_properties.py
tests/test_integration/: test_basic_setup.py  test_complete_workflows.py  test_component_integration.py  test_engine_integration.py  (+1 more)
(+43 files in other folders)
